<?xml version="1.0"?>
<package>
  <name>rr_msgs</name>
  <version>4.0.0</version>
  <description>Relational Robot project messages</description>

  <maintainer email="jakory@media.mit.edu">jakory</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/mitmedialab/rr-msgs</url>
  <author email="jakory@media.mit.edu">jakory</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
